service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: hello-world
  labels:
    app: hello-world
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: hello-world
  type: ClusterIP
